# FDIC_OMG

./: .coverage  .gitignore  README.md  TODO.md  build_rdftab.sh  csv2rdf  manual_test.sh  output_simple.ttl  pyproject.toml  pytest.ini  report.html  run_tests.sh  serve_viewer.py  setup.py  test_manual.py  test_simple.py  test_viewer.py
example/: example1.csv
fdic_omg/: __init__.py  __main__.py  annotation_converter.py  cli.py  cli_simple.py  column_mappings.ttl  core.py  core_simple.py  csv2rdf.py  job.py  job_utils.py
fdic_omg/annotations/: column_annotations.ttl  fdic_banks.ttl  fdic_banks.yaml
fdic_omg/converters/: format_converter.py
fdic_omg/docs/: FORMAT_GUIDE.md
fdic_omg/mappings/: column_mappings.jsonld  column_mappings.ttl  column_mappings.yaml
fdic_omg/mappings/schemas/: mapping_schema.json
tests/: README.md  TEST_SUMMARY.md  __init__.py  requirements.txt  test_annotation_converter.py  test_bom_handling.py  test_cli.py  test_core.py  test_csv2rdf_output.py  test_integration.py  test_job_integration.py  test_rdftab_viewer.py  test_rdftab_viewer_sync.py  test_viewer_quick.py  test_viewer_simple.py
tests/fixtures/: minimal_mapping.jsonld  minimal_mapping.ttl  minimal_mapping.yaml
tests/integration/: test_round_trip_conversions.py
tests/unit/: test_format_converter.py  test_json_schema_validation.py
